# sc8pr3-gallery

./: README.md  setup.cfg
examples/: asterShield.py  fakeCursor.py  hanoi.py  main.py  soccer.py  ticTacToe.py
sc8pr3_gallery/: chimp.py  electric.py  img.data  main.py  park.py  rockPaperScissors.py  transition.py
