[metadata]
name = sc8pr3_gallery
version = 3.0.0
author = D.G. MacCarthy
author_email = sc8pr.py@gmail.com
url = https://dmaccarthy.github.io/sc8pr
description = Examples of sc8pr 3 programs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = graphics animation sprite gui robotics pygame educational
license = GPLv3
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Education
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3
	Topic :: Software Development :: Libraries :: pygame
	Topic :: Multimedia :: Graphics
	Topic :: Education
	Topic :: Games/Entertainment

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = sc8pr>=3.0.4
python_requires = >=3.7
